# json-as

./: .gitignore  .npmignore  .prettierignore  .prettierrc.json  ARCHITECTURE.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  FAST_PATH_DESERIALIZE.md  IMPROVEMENTS.md  LICENSE  PROJECT_WALKTHROUGH.md  README.md  TODO  TODO.md  as-bench.config.json  as-test.config.json  as-test.fast-path.config.json  bench.ts  bug.mjs  build-charts.sh  eslint.config.js  package.json  publish-benchmarks.sh  publish.sh  rfc.config.json  run-bench.as.sh  run-bench.js.sh  run-tests.sh  test.ts  ussy.md
.github/: dependabot.yml
assembly/: index.d.ts  index.ts  lazy.ts  playground.ts  test.tmp.ts  test.ts  tsconfig.json  xid.ts
bench/: abc.bench.ts  large.bench.ts  medium.bench.ts  prim-bool.bench.ts  prim-f32.bench.ts  prim-f64.bench.ts  prim-i32.bench.ts  prim-i64.bench.ts  prim-string.bench.ts  small.bench.ts  throughput.ts  token.bench.ts  tsconfig.json  uuidv4.bench.ts  vec3.bench.ts
bench/native-dtoa-head2head/: CMakeLists.txt  main.cpp
ci/: run-bench.as.sh
lib/: as-bs.ts
schema/: package.json  tsconfig.json
scripts/: backfill-benchmark-charts.sh  bench-all.sh  build-chart-classic.ts  build-chart-runtimes.ts  build-chart-warpo.ts  build-chart01.ts  build-chart02.ts  build-chart03.ts  build-chart04.ts  build-chart05.ts  build-chart06.ts  build-chart07.ts  build-chart08.ts  build-chart09.ts  build-chart10.ts  build-chart11.ts  build-chart12.ts  build-chart13.ts  build-chart14.ts  build-chart15.ts  build-charts.sh  build-default-values.ts  build-lazy.ts  build-library-deserialize.ts  build-library-serialize.ts  build-object-deserialize-1mb.ts  build-object-deserialize.ts  build-object-serialize-1mb.ts  build-object-serialize.ts  build-overview-deserialize.ts  build-overview-serialize.ts  build-primitive-deserialize.ts  build-primitive-serialize.ts  build-rfc-coverage.ts  commit-msg.sh  (+23 more)
(+912 files in other folders)
